fix video animation on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -22,6 +22,11 @@
         display: none;
     }
 
+    .home-img img,
+    .home-img video {
+        left: 0%;
+    }
+
     .itens-wrapper {
         height: 90%;
         width: 100%;
